--- a/settings.gradle
+++ b/settings.gradle
@@ -19,8 +19,15 @@ pluginManagement {
 }
 
 plugins {
+    id 'com.diffplug.blowdryerSetup' version '1.6.0'
     // Automatic toolchain provisioning
-    id 'org.gradle.toolchains.foojay-resolver-convention' version "${foojay_version}"
+    id 'org.gradle.toolchains.foojay-resolver-convention' version '0.4.0'
 }
 
-rootProject.name = archives_base_name
+blowdryerSetup {
+    repoSubfolder 'spotless'
+    github('GregTechCEu/Buildscript', 'tag', '1.0.0')
+    //devLocal '.' // Use this when testing config updates locally
+}
+
+rootProject.name = modArchivesBaseName
