fix CF/modrinth release type
rollback mixinbooter version

--- a/gradle.properties
+++ b/gradle.properties
@@ -88,6 +88,10 @@ curseForgeProjectId =
 # Example: requiredDependency:railcraft;embeddedLibrary:cofhlib;incompatible:buildcraft
 curseForgeRelations =
 
+# This project's release type on CurseForge and/or Modrinth
+# Allowed types: release, beta, alpha
+releaseType = release
+
 # Prevent the source code from being published
 noPublishedSources = false
 
