--- a/gradle.properties
+++ b/gradle.properties
@@ -19,6 +19,7 @@ minecraftVersion = 1.12.2
 # restart Minecraft in development. Choose this dependent on your mod:
 # Do you need consistent player progressing (for example Thaumcraft)? -> Select a name
 # Do you need to test how your custom blocks interacts with a player that is not the owner? -> leave name empty
+# Alternatively this can be set with the 'DEV_USERNAME' environment variable.
 developmentEnvironmentUserName = Developer
 
 # Enables using modern java syntax (up to version 17) via Jabel, while still targeting JVM 8.
@@ -37,7 +38,7 @@ gradleTokenVersion = VERSION
 # Example value: apiPackage = api + modGroup = com.myname.mymodid -> com.myname.mymodid.api
 apiPackage =
 
-# Specify the configuration file for Forge's access transformers here. It must be placed into /src/main/resources/META-INF/
+# Specify the configuration file for Forge's access transformers here. It must be placed into /src/main/resources/
 # There can be multiple files in a comma-separated list.
 # Example value: mymodid_at.cfg,jei_at.cfg
 accessTransformersFile =
@@ -49,8 +50,8 @@ mixinsPackage =
 # Specify the core mod entry class if you use a core mod. This class must implement IFMLLoadingPlugin!
 # Example value: coreModClass = asm.FMLPlugin + modGroup = com.myname.mymodid -> com.myname.mymodid.asm.FMLPlugin
 coreModClass =
-# If your project is only a consolidation of mixins or a core mod and does NOT contain a 'normal' mod ( = some class
-# that is annotated with @Mod) you want this to be true. When in doubt: leave it on false!
+# If your project is only a consolidation of mixins or a core mod and does NOT contain a 'normal' mod (meaning that
+# there is no class annotated with @Mod) you want this to be true. When in doubt: leave it on false!
 containsMixinsAndOrCoreModOnly = false
 
 # Enables Mixins even if this mod doesn't use them, useful if one of the dependencies uses mixins.
@@ -60,10 +61,11 @@ forceEnableMixins = false
 includeWellKnownRepositories = true
 
 
-# Publishing to modrinth requires you to set the MODRINTH_TOKEN environment variable to your current modrinth API token.
+# Publishing to modrinth requires you to set the MODRINTH_API_KEY environment variable to your current modrinth API token.
 
 # The project's ID on Modrinth. Can be either the slug or the ID.
 # Leave this empty if you don't want to publish on Modrinth.
+# Alternatively this can be set with the 'MODRINTH_PROJECT_ID' environment variable.
 modrinthProjectId =
 
 # The project's relations on Modrinth. You can use this to refer to other projects on Modrinth.
@@ -75,10 +77,11 @@ modrinthProjectId =
 modrinthRelations =
 
 
-# Publishing to CurseForge requires you to set the CURSEFORGE_TOKEN environment variable to one of your CurseForge API tokens.
+# Publishing to CurseForge requires you to set the CURSEFORGE_API_KEY environment variable to one of your CurseForge API tokens.
 
 # The project's numeric ID on CurseForge. You can find this in the About Project box.
 # Leave this empty if you don't want to publish on CurseForge.
+# Alternatively this can be set with the 'CURSEFORGE_PROJECT_ID' environment variable.
 curseForgeProjectId =
 
 # The project's relations on CurseForge. You can use this to refer to other projects on CurseForge.
@@ -106,4 +109,12 @@ enableJUnit = true
 # Deployment debug setting
 # Uncomment this to test deployments to CurseForge and Modrinth
 # Alternatively, you can set the 'DEPLOYMENT_DEBUG' environment variable.
-# deploymentDebug = true
+deploymentDebug = false
+
+
+# Gradle Settings
+# Effectively applies the '--stacktrace' flag by default
+org.gradle.logging.stacktrace = all
+# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
+# This is required to provide enough memory for the Minecraft decompilation process.
+org.gradle.jvmargs = -Xmx3G
