--- a/settings.gradle
+++ b/settings.gradle
@@ -26,7 +26,7 @@ plugins {
 
 blowdryerSetup {
     repoSubfolder 'spotless'
-    github('GregTechCEu/Buildscript', 'tag', '1.0.0')
+    github('GregTechCEu/Buildscripts', 'commit', 'a1e1f2dfebb66f8fc652cd3e020b871fbd8604cb')
     //devLocal '.' // Use this when testing config updates locally
 }
 
