--- a/gradle.properties
+++ b/gradle.properties
@@ -100,6 +100,9 @@ noPublishedSources = false
 
 # Enable spotless checks
 # Enforces code formatting on your source code
+# By default this will use the files found here: https://github.com/GregTechCEu/Buildscripts/tree/master/spotless
+# to format your code. However, you can create your own version of these files and place them in your project's
+# root directory to apply your own formatting options instead.
 enableSpotless = false
 
 # Enable JUnit testing platform used for testing your code.
