--- a/gradle.properties
+++ b/gradle.properties
@@ -103,6 +103,16 @@ releaseType = release
 # Prevent the source code from being published
 noPublishedSources = false
 
+
+# Publish to a custom maven location. Follows a few rules:
+# Group ID can be set with the 'ARTIFACT_GROUP_ID' environment variable, default to 'project.group'
+# Artifact ID can be set with the 'ARTIFACT_ID' environment variable, default to 'project.name'
+# Version can be set with the 'RELEASE_VERSION' environment variable, default to 'modVersion'
+# For maven credentials:
+# Username is set with the 'MAVEN_USER' environment variable, default to "NONE"
+# Password is set with the 'MAVEN_PASSWORD' environment variable, default to "NONE"
+customMavenPublishUrl =
+
 # Enable spotless checks
 # Enforces code formatting on your source code
 # By default this will use the files found here: https://github.com/GregTechCEu/Buildscripts/tree/master/spotless
