--- a/gradle.properties
+++ b/gradle.properties
@@ -66,6 +66,16 @@ includeWellKnownRepositories = true
 includeCommonDevEnvMods = true
 
 
+# If enabled, you may use 'shadowCompile' for dependencies. They will be integrated in your jar. It is your
+# responsibility check the licence and request permission for distribution, if required.
+usesShadowedDependencies = false
+# If disabled, won't remove unused classes from shaded dependencies. Some libraries use reflection to access
+# their own classes, making the minimization unreliable.
+minimizeShadowedDependencies = true
+# If disabled, won't rename the shadowed classes.
+relocateShadowedDependencies = true
+
+
 # Publishing to modrinth requires you to set the MODRINTH_API_KEY environment variable to your current modrinth API token.
 
 # The project's ID on Modrinth. Can be either the slug or the ID.
