fix `getReleaseType()` self-referencing

--- a/build.gradle
+++ b/build.gradle
@@ -979,7 +979,7 @@ def getSecondaryArtifacts() {
 }
 
 def getReleaseType() {
-    String type = releaseType
+    String type = project.releaseType
     if (!(type in ['release', 'beta', 'alpha'])) {
         throw new Exception("Release type invalid! Found \"" + type + "\", allowed: \"release\", \"beta\", \"alpha\"")
     }
