default changelog generation option

--- a/gradle.properties
+++ b/gradle.properties
@@ -110,6 +110,10 @@ curseForgeRelations =
 # Allowed types: release, beta, alpha
 releaseType = release
 
+# Generate a default changelog for releases. Requires git to be installed, as it uses it to generate a changelog of
+# commits since the last tagged release.
+generateDefaultChangelog = false
+
 # Prevent the source code from being published
 noPublishedSources = false
 
