--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -17,6 +17,8 @@
  * To add a mod with CurseMaven, replace '("g:n:v:c")' in the above with 'rfg.deobf("curse.maven:project_slug-project_id:file_id")'
  * Example: implementation rfg.deobf("curse.maven:gregtech-ce-unofficial-557242:4527757")
  *
+ * To shadow a dependency, use 'shadowImplementation'. For more info, see https://github.com/GregTechCEu/Buildscripts/blob/master/docs/shadow.md
+ *
  * For more details, see https://docs.gradle.org/8.0.1/userguide/java_library_plugin.html#sec:java_library_configurations_graph
  */
 dependencies {
