--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,8 @@ modId = mymodid
 
 modGroup = com.myname.mymodid
 
+# Version of your mod.
+# This field can be left empty if you want your mod's version to be determined by the latest git tag instead.
 modVersion = 1.0.0
 
 # The name of your jar when you produce builds, not including any versioning info
