--- a/gradle.properties
+++ b/gradle.properties
@@ -109,6 +109,7 @@ curseForgeProjectId =
 curseForgeRelations =
 
 # This project's release type on CurseForge and/or Modrinth
+# Alternatively this can be set with the 'RELEASE_TYPE' environment variable.
 # Allowed types: release, beta, alpha
 releaseType = release
 
