--- a/build.gradle
+++ b/build.gradle
@@ -22,9 +22,9 @@ plugins {
     id 'eclipse'
     id 'maven-publish'
     id 'org.jetbrains.gradle.plugin.idea-ext' version '1.1.7'
-    id 'com.gtnewhorizons.retrofuturagradle' version '1.3.+'
-    id 'net.darkhax.curseforgegradle' version '1.0.+' apply false
-    id 'com.modrinth.minotaur' version '2.7.+' apply false
+    id 'com.gtnewhorizons.retrofuturagradle' version '1.3.19'
+    id 'net.darkhax.curseforgegradle' version '1.0.7' apply false
+    id 'com.modrinth.minotaur' version '2.8.0' apply false
     id 'com.diffplug.spotless' version '6.13.0' apply false
     id 'com.palantir.git-version' version '3.0.0' apply false
     id 'com.github.johnrengelman.shadow' version '8.1.1' apply false
