Fix changelog race in Mondrinth/CurseForge

--- a/build.gradle
+++ b/build.gradle
@@ -712,7 +712,8 @@ idea {
 
 
 // Deployment
-
+def final modrinthApiKey = providers.environmentVariable('MODRINTH_API_KEY')
+def final cfApiKey = providers.environmentVariable('CURSEFORGE_API_KEY')
 final boolean isCIEnv = providers.environmentVariable('CI').getOrElse('false').toBoolean()
 
 if (isCIEnv || deploymentDebug.toBoolean()) {
@@ -749,58 +750,62 @@ tasks.register('generateChangelog') {
             changelog = "Changes since ${lastTag}:\n${{("\n" + changelog).replaceAll("\n", "\n* ")}}"
         }
         def f = getFile('build/changelog.md')
-        f.write(changelog ?: 'There have been no changes.', 'UTF-8')
+        changelog = changelog ?: 'There have been no changes.'
+        f.write(changelog, 'UTF-8')
+
+        // Set changelog for Modrinth
+        if (modrinthApiKey.isPresent() || deploymentDebug.toBoolean()) {
+            modrinth.changelog.set(changelog)
+        }
     }
 }
 
-// Curseforge
-def final cfApiKey = providers.environmentVariable('CURSEFORGE_API_KEY')
 if (cfApiKey.isPresent() || deploymentDebug.toBoolean()) {
     apply plugin: 'net.darkhax.curseforgegradle'
     //noinspection UnnecessaryQualifiedReference
     tasks.register('curseforge', net.darkhax.curseforgegradle.TaskPublishCurseForge) {
-        apiToken = cfApiKey.getOrElse('debug_token')
+        doFirst {
+            apiToken = cfApiKey.getOrElse('debug_token')
 
-        def mainFile = upload(curseForgeProjectId, reobfJar)
-        def changelogFile = getChangelog()
-        def changelogRaw = changelogFile.exists() ? changelogFile.getText('UTF-8') : ""
+            def mainFile = upload(curseForgeProjectId, reobfJar)
+            def changelogFile = getChangelog()
+            def changelogRaw = changelogFile.exists() ? changelogFile.getText('UTF-8') : ""
 
-        mainFile.displayName = "${modName}: ${modVersion}"
-        mainFile.releaseType = getReleaseType()
-        mainFile.changelog = changelogRaw
-        mainFile.changelogType = 'markdown'
-        mainFile.addModLoader 'Forge'
-        mainFile.addJavaVersion "Java 8"
-        mainFile.addGameVersion minecraftVersion
+            mainFile.displayName = "${modName}: ${modVersion}"
+            mainFile.releaseType = getReleaseType()
+            mainFile.changelog = changelogRaw
+            mainFile.changelogType = 'markdown'
+            mainFile.addModLoader 'Forge'
+            mainFile.addJavaVersion "Java 8"
+            mainFile.addGameVersion minecraftVersion
 
-        if (curseForgeRelations.size() != 0) {
-            String[] deps = curseForgeRelations.split(';')
-            deps.each { dep ->
-                if (dep.size() == 0) {
-                    return
+            if (curseForgeRelations.size() != 0) {
+                String[] deps = curseForgeRelations.split(';')
+                deps.each { dep ->
+                    if (dep.size() == 0) {
+                        return
+                    }
+                    String[] parts = dep.split(':')
+                    String type = parts[0], slug = parts[1]
+                    if (!(type in ['requiredDependency', 'embeddedLibrary', 'optionalDependency', 'tool', 'incompatible'])) {
+                        throw new Exception('Invalid Curseforge dependency type: ' + type)
+                    }
+                    mainFile.addRelation(slug, type)
                 }
-                String[] parts = dep.split(':')
-                String type = parts[0], slug = parts[1]
-                if(!(type in ['requiredDependency', 'embeddedLibrary', 'optionalDependency', 'tool', 'incompatible'])) {
-                    throw new Exception('Invalid Curseforge dependency type: ' + type)
-                }
-                mainFile.addRelation(slug, type)
             }
-        }
 
-        for (artifact in getSecondaryArtifacts()) {
-            def additionalFile = mainFile.withAdditionalFile(artifact)
-            additionalFile.changelog = changelogRaw
+            for (artifact in getSecondaryArtifacts()) {
+                def additionalFile = mainFile.withAdditionalFile(artifact)
+                additionalFile.changelog = changelogRaw
+            }
+            disableVersionDetection()
+            debugMode = deploymentDebug.toBoolean()
         }
-        disableVersionDetection()
-        debugMode = deploymentDebug.toBoolean()
     }
     tasks.curseforge.dependsOn(build)
     tasks.curseforge.dependsOn('generateChangelog')
 }
 
-// Modrinth
-def final modrinthApiKey = providers.environmentVariable('MODRINTH_API_KEY')
 if (modrinthApiKey.isPresent() || deploymentDebug.toBoolean()) {
     apply plugin: 'com.modrinth.minotaur'
     def final changelogFile = getChangelog()
